--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ecommerce</title>
+    <title>ECOMMERCE WEB-SITE</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <link rel="stylesheet" href="style.css">
@@ -173,11 +173,10 @@
           <div class="col-sm-12 col-md-6 col-lg-3">
 
             <div class="card">
-                
-            <img src="images/led2.jpg" class="card-img-top" alt="...">
+              <img src="images/led2.jpg" class="card-img-top" alt="...">
               <div class="card-body">
           
-                <h5 class="card-title">SAMSUNG LED </h5>
+                <h5 class="card-title">Sumsung LED</h5>
                 <p class="card-text">Rs:90,000</p>
                 <a href="#" class="btn btn-primary">Add to cart</a>
               </div>
@@ -496,13 +495,13 @@
       <h4>follow us</h4>
 
       <div class="social-links">
-         <a href="#">
+         <a href="http://www.facebook.com" target="_blank">
           <i class="fa fa-facebook" aria-hidden="true"></i></a>
-          <a href="#">
+          <a href="http://www.twitter.com" target="_blank">
           <i class="fa fa-twitter" aria-hidden="true"></i></a>
-          <a href="#">
+          <a href="http://www.instagram.com" target="_blank">
           <i class="fa fa-instagram" aria-hidden="true"></i></a>
-          <a href="#">
+          <a href="http://www.linkedin.com" target="_blank">
           <i class="fa fa-linkedin" aria-hidden="true"></i>
          </a>
       </div>
